@@ -1293,12 +1293,13 @@ cr_utils_dump_n_chars2 (guchar a_char, GString * a_string, glong a_nb)
 }
 
 gdouble
-cr_utils_n_to_0_dot_n (glong a_n)
+cr_utils_n_to_0_dot_n (glong a_n, glong decimal_places)
 {
         gdouble result = a_n;
 
-        while (ABS (result) > 1) {
+        while (decimal_places > 0) {
                 result = result / 10;
+                decimal_places--;
         }
 
         return result;
